# streamlit-image-tagging

./: .gitignore  README.md  main_page.py  pyproject.toml
pages/: step_1_create_initial_backup.py  step_2_annotate_images.py
